Apply spotless format for module core:parser